--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "formik": "^1.5.8",
     "react": "16.9.0",
     "react-native": "0.61.1"
   },
