--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "formik": "^1.5.8",
     "react": "16.9.0",
-    "react-native": "0.61.1"
+    "react-native": "0.61.1",
+    "react-native-elements": "^1.2.3",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
