--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@babel/runtime": "^7.6.2",
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.9.0",
-    "eslint": "^6.4.0",
+    "eslint": "^6.5.1",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.0",
+    "prettier": "^1.18.2",
+    "prop-types": "^15.7.2",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
