--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "flow": "flow"
+    "flow": "flow",
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "formik": "^1.5.8",
@@ -25,8 +26,17 @@
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.9.0",
     "eslint": "^6.5.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "flow-bin": "^0.109.0",
+    "husky": "^3.0.8",
     "jest": "^24.9.0",
+    "lint-staged": "^10.0.0-0",
     "metro-react-native-babel-preset": "^0.56.0",
     "prettier": "^1.18.2",
     "prop-types": "^15.7.2",
@@ -34,5 +44,11 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+    "eslint --fix",
+    "git add"
+    ]
+    }
 }
