--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "react-native": "0.61.1",
     "react-native-elements": "^1.2.3",
     "react-navigation": "^4.0.10",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
     "yup": "^0.27.0"
   },
   "devDependencies": {
